fix: adjust padding and scrollbar styles in sidebar settings for better mobile experience

--- a/packages/seed-bible/seed-bible/components/Tabs/Tabs.css
+++ b/packages/seed-bible/seed-bible/components/Tabs/Tabs.css
@@ -582,6 +582,7 @@
   gap: 0.625rem;
   min-height: 0;
   flex: 1;
+  padding: 5px;
 }
 
 .sb-sidebar-settings-close-button {
@@ -603,6 +604,8 @@
   flex: 1;
   overflow-y: auto;
   padding-bottom: 3rem;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
 }
 
 .sb-sidebar-settings-content .sb-settings-page {
